log
Fri Apr  8 11:30:13 HSP 2022: 
 hashmap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
9b19e68
Fri Apr  8 11:43:45 HSP 2022: 
 hashmap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  1|5
total_score: 10/70
a5fc932
Fri Apr  8 11:44:19 HSP 2022: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|5
total_score: 20/70
df23d92
Fri Apr  8 11:58:10 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
8cd6b0b
Fri Apr  8 12:09:48 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
c5a4988
Sun Apr 10 12:50:59 HSP 2022: 
 hashmap.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:89:21: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
         map->current=map->buckets[posicion];
                     ^
hashmap.c:103:25: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
             map->current=map->buckets[posicion];
                         ^
cc1.exe: all warnings being treated as errors
Compilation failed
2c9be5c
Sun Apr 10 12:52:41 HSP 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
58f858c
Sun Apr 10 12:57:12 HSP 2022: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
d7ca9ed
Sun Apr 10 12:58:05 HSP 2022: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  8|3
total_score: 40/70
4cc77c2
Sun Apr 10 13:11:08 HSP 2022: 
 hashmap.c | 26 ++++++++++++++++++++++++--
 1 file changed, 24 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:84:16: error: 'return' with a value, in function returning void [-Werror]
         return NULL;
                ^~~~
hashmap.c:79:6: note: declared here
 void eraseMap(HashMap * map,  char * key) {
      ^~~~~~~~
hashmap.c:97:20: error: 'return' with a value, in function returning void [-Werror]
             return NULL;
                    ^~~~
hashmap.c:79:6: note: declared here
 void eraseMap(HashMap * map,  char * key) {
      ^~~~~~~~
hashmap.c: In function 'searchMap':
hashmap.c:136:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
96386f4
Sun Apr 10 13:39:48 HSP 2022: 
 hashmap.c | 7 -------
 1 file changed, 7 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:129:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
15e7348
Sun Apr 10 13:41:00 HSP 2022: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
6a95ce4
Sun Apr 10 13:43:13 HSP 2022: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  10|0
   [ INFO ] se intenta eliminar dato que no existe (key:holo con hash=2)
fedbd22
Sun Apr 10 13:44:11 HSP 2022: 
 hashmap.c | 10 ++--------
 1 file changed, 2 insertions(+), 8 deletions(-)
 tests:  8|3
total_score: 40/70
128bd87
Sun Apr 10 13:47:03 HSP 2022: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  11|2
total_score: 50/70
f859f68
Sun Apr 10 13:52:15 HSP 2022: 
 hashmap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function 'firstMap':
hashmap.c:152:18: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
     map->current = map->buckets[posicion];
                  ^
cc1.exe: all warnings being treated as errors
Compilation failed
2599005
Sun Apr 10 13:52:38 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
235a9fc
Sun Apr 10 13:53:35 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5a2ed50
Sun Apr 10 13:58:27 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
64eb7fb
Sun Apr 10 14:02:17 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
75c716f
Sun Apr 10 14:10:41 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
f90d821
Sun Apr 10 14:11:26 HSP 2022: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  12|2
total_score: 50/70
dd5620c
Sun Apr 10 14:18:56 HSP 2022: 
 hashmap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  0|0
d062245
Sun Apr 10 14:32:37 HSP 2022: 
 hashmap.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  0|0
3b53374
Sun Apr 10 14:34:18 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
bbdeb68
Sun Apr 10 14:37:21 HSP 2022: 
 hashmap.c | 21 ++++++++++++---------
 1 file changed, 12 insertions(+), 9 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'nextMap':
hashmap.c:160:12: error: expected expression before ')' token
     while ()
            ^
hashmap.c:158:10: error: unused variable 'posicion' [-Werror=unused-variable]
     long posicion = map->current;
          ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
99dc8dd
Sun Apr 10 14:37:41 HSP 2022: 
 hashmap.c | 8 --------
 1 file changed, 8 deletions(-)
 tests:  13|2
total_score: 50/70
aaffd53
Sun Apr 10 14:45:19 HSP 2022: 
 hashmap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  0|0
7be390e
Sun Apr 10 14:47:02 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|2
total_score: 50/70
36d9de2
Sun Apr 10 14:59:08 HSP 2022: 
 hashmap.c | 8 --------
 1 file changed, 8 deletions(-)
 tests:  13|2
total_score: 50/70
8ea17cb
Sun Apr 10 14:59:56 HSP 2022: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  15|2
total_score: 50/70
2fb5c30
Sun Apr 10 15:19:00 HSP 2022: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  16|1
total_score: 60/70
64a5b95
Sun Apr 10 15:35:14 HSP 2022: 
 hashmap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  0|0
128ade5
Sun Apr 10 15:39:30 HSP 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  17|0
total_score: 70/70
516d609
